Fix input overflow

--- a/css/woocommerce.css
+++ b/css/woocommerce.css
@@ -347,6 +347,10 @@ a.cart-contents {
     display: inline-block;
 }
 
+button, input, optgroup, select, textarea {
+    max-width: 100%;
+}
+
 @keyframes loading {
     from {
         transform: rotate(0deg);
